clean up code, login , register no loger require username
