# flask-api/manage.py
@@ -80,9 +80,9 @@ def seed_db():
     db.session.add(event_desc)
     group = Group(name="Group Name")
     db.session.add(group)
-    user1 = User(username='martin', email="a@a.com", password="password", cellphone_number="98983510", cellphone_cc="+598")
-    user2 = User(username='barreto', email="b@b.com", password="password")
-    user3 = User(username='cheluskis', email="c@c.com", password="password")
+    user1 = User(email="a@a.com", password="password", cellphone_number="98983510", cellphone_cc="+598")
+    user2 = User(email="b@b.com", password="password")
+    user3 = User(email="c@c.com", password="password")
     db.session.add(user1)
     db.session.add(user2)
     db.session.add(user3)
