# flask-main/swagger/swagger.yml
@@ -29,8 +29,6 @@ tags:
     description: Devices operations
   - name: email
     description: Email operations
-  - name: bookings
-    description: Booking endpoints
 paths:
   /ping:
     get:
@@ -64,7 +62,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/ApiResponse'
         '400':
-          description: Sorry. That email or username already exists.
+          description: Sorry. That email already exists.
         'default':
           $ref: '#/components/responses/ServerError'
     get:
@@ -307,7 +305,7 @@ paths:
   /auth/facebook/set_standalone_user:
     put:
       description: >-
-        sets username and password to work directly on the system without facebook
+        sets password to work directly on the system without facebook
       tags:
         - auth
       parameters:
@@ -319,22 +317,13 @@ paths:
             schema:
               type: object
               properties:
-                username:
-                  type: string
                 password:
                   type: string
               required:
-                - username
                 - password
       responses:
         '200':
           description: Successfully set standalone user.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ApiResponse'
-        '400':
-          description: Sorry. That username already exists, choose another username
           content:
             application/json:
               schema:
@@ -486,38 +475,6 @@ paths:
                 $ref: '#/components/schemas/ApiResponse'
         'default':
           $ref: '#/components/responses/ServerError'
-  /upcoming_bookings:
-    get:
-      description: Returns all users
-      tags:
-        - bookings
-      parameters:
-        - $ref: '#/components/parameters/acceptHeaderParam'
-      responses:
-        '200':
-          description: array upcoming booking
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/BookingArray'
-        'default':
-          $ref: '#/components/responses/ServerError'
-  /past_bookings:
-    get:
-      description: Returns all past bookings, paginated
-      tags:
-        - bookings
-      parameters:
-        - $ref: '#/components/parameters/acceptHeaderParam'
-      responses:
-        '200':
-          description: array user object
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/UserArray'
-        'default':
-          $ref: '#/components/responses/ServerError'
 externalDocs:
   description: Find out more about Swagger
   url: 'http://swagger.io'
@@ -538,8 +495,6 @@ components:
         id:
           type: integer
           format: int64
-        username:
-          type: string
         firstName:
           type: string
         lastName:
@@ -559,25 +514,12 @@ components:
       type: array
       items:
         $ref: '#/components/schemas/User'
-    Booking:
-      type: object
-      properties:
-        id:
-          type: integer
-          format: int64
-    BookingArray:
-      type: array
-      items:
-        $ref: '#/components/schemas/Booking'
     UserRegister:
       type: object
       required:
-        - username
         - email
         - password
       properties:
-        username:
-          type: string
         email:
           type: string
         password:
